python/test-data/testTypes1.err
untypy.error.UntypyTypeError
given:    '1'
expected: value of type int

context: inc(x: int) -> int
                ^^^
declared at: test-data/testTypes1.py:1
  1 | def inc(x: int) -> int:
  2 |     return x + 1

caused by: test-data/testTypes1.py:4
  4 | inc("1")
