python/test-data/testTypes1.py
def inc(x: int) -> int:
    return x + 1

inc("1")
